fix java 9 List.of replace by Arrays.asList